[package]
name = "channel-protocol"
version = "0.1.0"
edition = "2024"

[lib]
proc-macro = true

[dependencies]
quote = "1"
proc-macro2 = "1"
syn = { version = "2", features = ["extra-traits"] }
itertools = "0"
convert_case = "0.8.0"
oneshot = { version = "0.1.11", features = ["std"], default-features = false }
