[package]
name = "channel-protocol"
version = "0.2.0"
edition = "2024"
description = "Enable function-based communication instead of enum message sending. All based on channels."
license = "MIT"
documentation = "https://docs.rs/channel-protocol"
repository = "https://github.com/sub07/channel-protocol"
keywords = ["channels", "communication", "functions", "thread", "sync"]
homepage = "https://github.com/sub07/channel-protocol"

[lib]
proc-macro = true

[dependencies]
quote = "1"
proc-macro2 = "1"
syn = { version = "2", features = ["extra-traits"] }
itertools = "0"
convert_case = "0.8"
oneshot = { version = "0.1", features = ["std"], default-features = false }

[dev-dependencies]
winit = "0.30"
